# 3d_computer_graphics_using_opengl

./: .gitignore  Makefile  README.md  main.c  meson.build
include/: me_gl_window.h  me_shader_code.h
shaders/: fragment_shader_code.glsl  vertex_shader_code.glsl
src/: me_gl_window.c
